concord_macros/tests/dsl/fail/fail_rate_limit_duplicate_list_defaults.stderr
error: duplicate rate_limit profile `app` in rate_limit list
  --> tests/dsl/fail/fail_rate_limit_duplicate_list_defaults.rs:14:30
   |
14 |             rate_limit [app, app]
   |                              ^^^
